tests/ui/cve_2020_35877/minimal.stderr
error: it is an undefined behavior to offset a pointer using an unchecked integer
  --> tests/ui/cve_2020_35877/minimal.rs:4:15
   |
LL |         p = p.add(index);
   |             - ^^^^^^^^^^ offset here
   |             |
   |             pointer used here
   |
   = help: check whether it's in bound before offsetting
   = note: See the safety section in https://doc.rust-lang.org/std/primitive.pointer.html#method.offset
   = note: `#[deny(unchecked_pointer_offset)]` on by default

error: it is an undefined behavior to offset a pointer using an unchecked integer
  --> tests/ui/cve_2020_35877/minimal.rs:14:15
   |
LL |         p = p.add(index);
   |             - ^^^^^^^^^^ offset here
   |             |
   |             pointer used here
   |
   = help: check whether it's in bound before offsetting
   = note: See the safety section in https://doc.rust-lang.org/std/primitive.pointer.html#method.offset

error: it is an undefined behavior to offset a pointer using an unchecked integer
  --> tests/ui/cve_2020_35877/minimal.rs:52:20
   |
LL |     let ptr = slice.as_ptr();
   |                     -------- pointer used here
LL |     unsafe { &*ptr.add(1) }
   |                    ^^^^^^ offset here
   |
   = help: check whether it's in bound before offsetting
   = note: See the safety section in https://doc.rust-lang.org/std/primitive.pointer.html#method.offset

error: this operation will panic at runtime
  --> tests/ui/cve_2020_35877/minimal.rs:69:24
   |
LL |     unsafe { &*ptr.add(index % 0) }
   |                        ^^^^^^^^^ attempt to calculate the remainder of `_` with a divisor of zero
   |
   = note: `#[deny(unconditional_panic)]` on by default

error: aborting due to 4 previous errors

